--- a/config/Makefile
+++ b/config/Makefile
@@ -33,13 +33,23 @@ y.tab.c:	config.y
 		$(YACC) config.y
 
 clean:
-		rm -f config lex.yy.c y.tab.c
+		rm -f config lex.yy.c y.tab.c conf.h.orig
 
 conf.h:		config Configuration
 		./config Configuration conf.c conf.h
+		mv conf.h conf.h.orig
+		cp conf.header.h conf.h
+		cat conf.h.orig >> conf.h
+		echo >> conf.h
+		echo '#endif' >> conf.h
 
 conf.c:		config Configuration
 		./config Configuration conf.c conf.h
+		mv conf.h conf.h.orig
+		cp conf.header.h conf.h
+		cat conf.h.orig >> conf.h
+		echo >> conf.h
+		echo '#endif' >> conf.h
 
 install:	conf.h conf.c
 		cp -p conf.h ../include
