--- a/compile/Makefile
+++ b/compile/Makefile
@@ -8,7 +8,12 @@
 #									#
 #########################################################################
 
-COMPILER_ROOT	=	/usr/bin/
+ifeq ($(shell uname), Darwin)
+	COMPILER_ROOT	=	/usr/local/bin/x86_64-elf-
+else
+	COMPILER_ROOT	=	/usr/bin/
+endif
+
 PNAME		=	QEMU
 PLAT		=	Platform_$(PNAME)
 TOPDIR		=	..
@@ -126,6 +131,7 @@ clean:
 	@(cd $(TOPDIR)/config; make clean)
 	@echo removing xinu ...
 	@rm -f $(XINU)
+	@rm -f xinu.map
 
 #--------------------------------------------------------------------------------
 # Locations of source directories and exceptions (.c and .[sS] files to exclude)
